--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ header{
   background:#0a5679;
   padding:10px;
   text-decoration:underline;
+  border:0px;
+  border-bottom:10px;
+  border-style:solid;
+  border-color: #a57;
 }
 
 header a{
@@ -21,6 +25,9 @@ nav div{
   background:#0a5679;
   margin:10px;
   padding: 10px;
+  border-left-width:20px;
+  border-color:#a57;
+  border-left-style:solid;
 }
 
 nav div:hover{
@@ -37,4 +44,71 @@ nav a:visited{
 
 nav div#current{
   background: #9e0979;
+}
+
+/*tabel of contents on indexpage*/
+#tableofcontents{
+  list-style-type: none;
+}
+
+#tableofcontents div{
+  margin:5px;
+  padding:5px;
+  background-color:lightgrey;
+  width:80%;
+}
+
+#tableofcontents div img{
+  float:right;
+  width:20%;
+  border: 2px solid #888;
+  border-radius: 4px;
+}
+
+/*media*/
+div.media{
+  float:right;
+  padding:5px;
+  margin-left:10px;
+  border:5px;
+  border-style:solid;
+  border-color:#0a5679;
+  width:305px;
+}
+
+div.media img{
+  width:300px;
+}
+div.media iframe{
+  width:300px;
+  height: 225px;
+}
+
+#messagewindow{
+  width:50%;
+  height:100px;
+}
+/*responsivity to diffrent screen sizes*/
+@media screen and (max-width:1000px)
+{
+  #tableofcontents img{
+    display:none;
+  }
+  div.media{
+    float:none;
+  }
+}
+
+@media screen and (max-width:800px)
+{
+  div.media{
+  display: none;
+  }
+}
+
+@media screen and (max-width:500px)
+{
+  nav{
+    float:none;
+  }
 }
